--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,24 @@
  
     <groupId>fr.gugau.lfr.tools</groupId>
     <artifactId>lfr-theme-livedeploy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-alpha</version>
     <packaging>maven-plugin</packaging>
  
     <name>Liferay Theme Live-deploy</name>
     <description>Maven plugin that allow developpers to deploy a Liferay theme in seconds</description>
+ 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+ 
+    <scm>
+        <connection>scm:git:git@github.com:gugau-fr/lfr-theme-livedeploy.git</connection>
+        <developerConnection>scm:git:git@github.com:gugau-fr/lfr-theme-livedeploy.git</developerConnection>
+        <url>https://github.com/gugau-fr/lfr-theme-livedeploy</url>
+    </scm>
  
     <dependencies>
         <dependency>
